--- a/index.html
+++ b/index.html
@@ -11,6 +11,74 @@
 
 <body class="" data-theme="white-theme">
   <div class="bg-cover" data-theme="white-theme"></div>
+  <div class="total-game-container" data-theme="white-theme">
+    <div class="total-wrap">
+      <h2 class="total-game-title">Victory!</h2>
+      <div class="total-game-wrap">
+        <div class="total-game-wrap">
+          <h3 class="total-game-title">Your time</h3>
+          <div class="total-game-time"></div>
+        </div>
+        <div class="total-game-wrap">
+          <h3 class="total-game-title">Your score</h3>
+          <div class="total-game-score"></div>
+        </div>
+        <div class="total-game-wrap">
+          <h3 class="total-game-title">Moves count</h3>
+          <div class="total-game-moves"></div>
+        </div>
+        <div class="total-game-wrap">
+          <h3 class="total-game-title">Total score</h3>
+          <div class="total-game-result"></div>
+        </div>
+        <button class="total-game-close">
+          <svg class="total-game-icon icon active">
+            <use xlink:href="assets/svg/sprite.svg#close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="result-table-container">
+    <h2 class="result-table-title">Result table</h2>
+    <div class="result-table-wrap">
+      <div class="result-table-title">
+        <span class="empty-block"></span>
+        <h3>Score</h3>
+        <h3>Time</h3>
+      </div>
+      <div class="result-table-line">
+        <h4>Game#1</h4>
+      </div>
+      <div class="result-table-line">
+        <h4>Game#2</h4>
+      </div>
+      <div class="result-table-line">
+        <h4>Game#3</h4>
+      </div>
+      <div class="result-table-line">
+        <h4>Game#4</h4>
+      </div>
+      <div class="result-table-line">
+        <h4>Game#5</h4>
+      </div>
+      <div class="result-table-line">
+        <h4>Game#6</h4>
+      </div>
+      <div class="result-table-line">
+        <h4>Game#7</h4>
+      </div>
+      <div class="result-table-line">
+        <h4>Game#8</h4>
+      </div>
+      <div class="result-table-line">
+        <h4>Game#9</h4>
+      </div>
+      <div class="result-table-line">
+        <h4>Game#10</h4>
+      </div>
+    </div>
+  </div>
   <header class="header">
     <div class="header-container container">
       <button class="header-volume-button" data-theme="white-theme">
@@ -22,6 +90,9 @@
         </svg>
       </button>
       <h1 class="header-title">Angry Birds Memory Game</h1>
+      <button class="result-table-buttom">
+        Result table
+      </button>
     </div>
   </header>
   <main>
